--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -381,7 +381,6 @@
                                     padding-bottom: 0.4rem;
                                     .learn-more-button {
                                         color: #252934;
-                                        background-color: #white;
                                         border: 2px dashed #ccc;
                                         font-weight: 500;
                                         text-transform: upper;
@@ -417,17 +416,6 @@
                                 ::-webkit-scrollbar-thumb:hover {
                                     background: rgba(0,0,0,0.55);
                                 }
-                                .project-title-back {
-                                    position: relative;
-                                    color: #252934;
-                                    font-weight: 600;
-                                    text-transform: uppercase;
-                                    display: flex;
-                                    justify-content: center;
-                                    align-items: center;
-                                    width: 100%;
-                                    margin-top: 0.5rem;
-                                }
                                 .flip-back-button-container {
                                     position: relative;
                                     display: flex;
@@ -435,6 +423,7 @@
                                     align-items: center;
                                     margin-top: 1rem;
                                     width: 100%;
+                                    height: fit-content;
                                     .flip-back-button {
                                         border-radius: 50%;
                                         color: white;
@@ -448,10 +437,22 @@
                                     font-size: 0.8rem;
                                     font-weight: 500;
                                     color: #F24E4E;
-                                    height: 8%;
                                     padding-bottom: 0.5rem;
                                     border-bottom: 2.5px dashed #ccc;
-                                }   
+                                    height: fit-content;
+                                }
+                                .project-title-back {
+                                    position: relative;
+                                    color: #252934;
+                                    font-weight: 600;
+                                    text-transform: uppercase;
+                                    display: flex;
+                                    justify-content: center;
+                                    align-items: center;
+                                    width: 100%;
+                                    margin-top: 0.5rem;
+                                    height: fit-content;
+                                }
                                 .project-information-container {
                                     overflow-y: scroll;
                                     padding-top: 1rem;
