--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -424,6 +424,7 @@
                                     margin-top: 1rem;
                                     width: 100%;
                                     height: fit-content;
+                                    border: solid;
                                     .flip-back-button {
                                         border-radius: 50%;
                                         color: white;
@@ -440,6 +441,7 @@
                                     padding-bottom: 0.5rem;
                                     border-bottom: 2.5px dashed #ccc;
                                     height: fit-content;
+                                    border: solid;
                                 }
                                 .project-title-back {
                                     position: relative;
@@ -452,6 +454,7 @@
                                     width: 100%;
                                     margin-top: 0.5rem;
                                     height: fit-content;
+                                    border: solid;
                                 }
                                 .project-information-container {
                                     overflow-y: scroll;
