--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -690,6 +690,7 @@
   margin-top: 1rem;
   width: 100%;
   padding: 0.25rem 0 1rem 0;
+  border: solid;
 }
 
 .App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-back .flip-back-button-container .flip-back-button {
@@ -710,6 +711,7 @@
   height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
+  border: solid;
 }
 
 .App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-back .project-title-back {
@@ -731,6 +733,7 @@
   height: -moz-max-content;
   height: max-content;
   padding: 0.5rem 0 0.5rem 0;
+  border: solid;
 }
 
 .App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-back .project-information-container {
@@ -739,6 +742,7 @@
   padding-bottom: 1rem;
   margin-left: 1rem;
   margin-right: 1rem;
+  border: solid;
 }
 
 .App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-back .project-information-container .project-information-text {
