--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -424,6 +424,7 @@
                                     margin-top: 1rem;
                                     width: 100%;
                                     padding: 0.25rem 0 1rem 0;
+                                    border: solid;
                                     .flip-back-button {
                                         border-radius: 50%;
                                         color: white;
@@ -440,6 +441,7 @@
                                     padding-bottom: 0.5rem;
                                     border-bottom: 2.5px dashed #ccc;
                                     height: max-content;
+                                    border: solid;
                                 }
                                 .project-title-back {
                                     position: relative;
@@ -452,6 +454,7 @@
                                     width: 100%;
                                     height: max-content;
                                     padding: 0.5rem 0 0.5rem 0;
+                                    border: solid;
                                 }
                                 .project-information-container {
                                     overflow-y: scroll;
@@ -459,6 +462,7 @@
                                     padding-bottom: 1rem;
                                     margin-left: 1rem;
                                     margin-right: 1rem;
+                                    border: solid;
                                     .project-information-text {
                                         overflow-y: scroll;
                                         width: 100%;
