--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -648,6 +648,9 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
 }
 
