--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -396,6 +396,7 @@
                                 position: relative;
                                 display: flex;
                                 flex-direction: column;
+                                justify-content: flex-start;
                                 background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
                                 ::-webkit-scrollbar {
                                     all: unset;
