--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -382,6 +382,7 @@
                                     .learn-more-button {
                                         color: #252934;
                                         border: 2px dashed #ccc;
+                                        border-radius: 6px;
                                         font-weight: 500;
                                         text-transform: upper;
                                         display: flex;
