Added more content

--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -72,7 +72,7 @@
   display: inline-flex;
   height: 40px;
   width: 150px;
-  border: 2px solid #BFC0C0;
+  border: 2.5px dashed #BFC0C0;
   margin: 20px 20px 20px 20px;
   color: #BFC0C0;
   text-transform: uppercase;
